The SCSS File did not work Correct on Safari

--- a/frontend/src/page/RGBMixerPicture/RGBMixerPicture.scss
+++ b/frontend/src/page/RGBMixerPicture/RGBMixerPicture.scss
@@ -5,75 +5,96 @@
   flex: 1;
 }
 
-.canvas svg {
-  width: 100%;
-  height: auto;
+.canvasRectangle {
+  svg {
+    width: auto;
+    height: auto;
+  }
+  g {
+    mix-blend-mode: lighten
+  }
+
+  .BaseRectangle {
+    fill: black;
+    stroke: black;
+    x: 0;
+    y: 0;
+    rx: 5;
+    ry: 5;
+  }
+
+  .ColorRectangle {
+    x: 2.5;
+    y: 2.5;
+    rx: 5;
+    ry: 5;
+  }
 }
 
-g {
-  mix-blend-mode: lighten
+.canvasCircle {
+  $baseCircleBigR: 57.5;
+  $baseCircleSmallR: 55;
+  $baseCircleRedX: 75;
+  $baseCircleRedY: 75;
+  $baseCircleGreenX: 110;
+  $baseCircleGreenY: 75;
+  $baseCircleBlueX: 93;
+  $baseCircleBlueY: 101;
+
+  svg {
+    width: 100%;
+    height: auto;
+  }
+  g {
+    mix-blend-mode: lighten
+  }
+
+  .BaseCircle {
+    fill: black;
+    stroke: black;
+    strokeWidth: 2;
+  }
+
+
+  .BaseRed {
+    cx: $baseCircleRedX;
+    cy: $baseCircleRedY;
+    r: $baseCircleBigR;
+  }
+
+  .BaseGreen {
+    cx: $baseCircleGreenX;
+    cy: $baseCircleGreenY;
+    r: $baseCircleBigR;
+  }
+
+  .BaseBlue {
+    cx: $baseCircleBlueX;
+    cy: $baseCircleBlueY;
+    r: $baseCircleBigR;
+  }
+
+  .RedCircle {
+    cx: $baseCircleRedX;
+    cy: $baseCircleRedY;
+    r: $baseCircleSmallR;
+  }
+
+  .GreenCircle {
+    cx: $baseCircleGreenX;
+    cy: $baseCircleGreenY;
+    r: $baseCircleSmallR;
+  }
+
+  .BlueCircle {
+    cx: $baseCircleBlueX;
+    cy: $baseCircleBlueY;
+    r: $baseCircleSmallR;
+  }
 }
 
-$baseCircleBigR: 57.5;
-$baseCircleSmallR: 55;
-
-$baseCircleRedX: 75;
-$baseCircleRedY: 75;
-$baseCircleGreenX: 110;
-$baseCircleGreenY: 75;
-$baseCircleBlueX: 93;
-$baseCircleBlueY: 101;
 
 
-.BaseRectangle {
-  fill: black;
-  stroke: black;
 
-  x: 0;
-  y: 0;
-  rx: 5;
-  ry: 5;
-}
-.ColorRectangle{
-  x: 2.5;
-  y: 2.5;
-  rx: 5;
-  ry: 5;
-}
 
-.BaseCircle {
-  fill: black;
-  stroke: black;
-  strokeWidth: 2;
-}
-.BaseRed {
-  cx: $baseCircleRedX;
-  cy: $baseCircleRedY;
-  r: $baseCircleBigR;
-}
-.BaseGreen {
-  cx: $baseCircleGreenX;
-  cy: $baseCircleGreenY;
-  r: $baseCircleBigR;
-}
-.BaseBlue {
-  cx: $baseCircleBlueX;
-  cy: $baseCircleBlueY;
-  r: $baseCircleBigR;
-}
 
-.RedCircle {
-  cx: $baseCircleRedX;
-  cy: $baseCircleRedY;
-  r: $baseCircleSmallR;
-}
-.GreenCircle {
-  cx: $baseCircleGreenX;
-  cy: $baseCircleGreenY;
-  r: $baseCircleSmallR;
-}
-.BlueCircle {
-  cx: $baseCircleBlueX;
-  cy: $baseCircleBlueY;
-  r: $baseCircleSmallR;
-}
